[project]
name = "hasif-transcriber-backend"
version = "0.1.0"
description = "Real-time audio transcription backend using FastAPI and Soniox"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pyaudio>=0.2.11",
    "websockets>=11.0.0",
]

[tool.uv]
dev-dependencies = []